# dstu8845

./: CMakeLists.txt  README.md  main.c  strumok.c  strumok.h
.circleci/: config.yml
